--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-TODO: Provide description for the dataset -- basic details about the study, possibly pointing to pre-registration (if public or embargoed)
+Occlusion paradigm with studied and new materials. Participants needed to retrieve the occluded parts of the image either episodically or semantically. 
+
+See more here: https://osf.io/va6fc
